// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardStatsWidget /> renders correctly 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    jest
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-fw card-favourite"
        data-card-id={100}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </h4>
  <div
    className="card-body"
  >
    <table
      className="table table-striped"
    >
      <thead
        className="thead-inverse"
      >
        <tr>
          <th
            colSpan={2}
          >
            Stats
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            Health
          </th>
          <td>
            4
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Attack
          </th>
          <td>
            1
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Defence
          </th>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Up Attack
          </th>
          <td>
            9
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Right Attack
          </th>
          <td>
            6
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Down Attack
          </th>
          <td>
            3
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Left Attack
          </th>
          <td>
            5
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Total Stats
          </th>
          <td>
            8
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<CardStatsWidget /> renders correctly with favourite 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    jest
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-fw card-favourite enabled"
        data-card-id={100}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M381.2 150.3L524.9 171.5C536.8 173.2 546.8 181.6 550.6 193.1C554.4 204.7 551.3 217.3 542.7 225.9L438.5 328.1L463.1 474.7C465.1 486.7 460.2 498.9 450.2 506C440.3 513.1 427.2 514 416.5 508.3L288.1 439.8L159.8 508.3C149 514 135.9 513.1 126 506C116.1 498.9 111.1 486.7 113.2 474.7L137.8 328.1L33.58 225.9C24.97 217.3 21.91 204.7 25.69 193.1C29.46 181.6 39.43 173.2 51.42 171.5L195 150.3L259.4 17.97C264.7 6.954 275.9-.0391 288.1-.0391C300.4-.0391 311.6 6.954 316.9 17.97L381.2 150.3z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </h4>
  <div
    className="card-body"
  >
    <table
      className="table table-striped"
    >
      <thead
        className="thead-inverse"
      >
        <tr>
          <th
            colSpan={2}
          >
            Stats
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            Health
          </th>
          <td>
            4
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Attack
          </th>
          <td>
            1
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Defence
          </th>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Up Attack
          </th>
          <td>
            9
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Right Attack
          </th>
          <td>
            6
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Down Attack
          </th>
          <td>
            3
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Left Attack
          </th>
          <td>
            5
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Total Stats
          </th>
          <td>
            8
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
